# be/src/main/kotlin/com/kredius/be/controller/LoanController.kt
@@ -3,6 +3,7 @@ package com.kredius.be.controller
 import com.kredius.be.api.LoansApi
 import com.kredius.be.model.CreateGivenLoanRequest
 import com.kredius.be.model.CreateReceivedLoanRequest
+import com.kredius.be.model.LoanDetailResponse
 import com.kredius.be.model.LoanResponse
 import com.kredius.be.model.LoanType
 import com.kredius.be.service.LoanService
@@ -12,6 +13,9 @@ import org.springframework.web.bind.annotation.RestController
 
 @RestController
 class LoanController(private val loanService: LoanService) : LoansApi {
+
+    override fun getLoan(id: Long): ResponseEntity<LoanDetailResponse> =
+        ResponseEntity.ok(loanService.getOne(id))
 
     override fun getLoans(type: LoanType?): ResponseEntity<List<LoanResponse>> =
         ResponseEntity.ok(loanService.getAll(type))
